--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ captures/
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/misc.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
 .idea/dictionaries
@@ -43,6 +44,7 @@ captures/
 .idea/caches
 .DS_Store
 /local.properties
+/app/debug
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
