--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="blog.photo.bildalbum">
+        package="blog.photo.buildalbum">
 
+    <uses-feature
+            android:name="android.hardware.camera"
+            android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+            android:maxSdkVersion="18" />
 
     <application
             android:allowBackup="true"
@@ -27,7 +34,7 @@
 
         <provider
                 android:name="androidx.core.content.FileProvider"
-                android:authorities="blog.photo.bildalbum.FileProvider"
+                android:authorities="blog.photo.buildalbum.FileProvider"
                 android:exported="false"
                 android:grantUriPermissions="true">
             <meta-data
