--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,16 @@
 
 buildscript {
     ext.kotlin_version = "1.3.41"
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:3.5.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -23,4 +26,11 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    roomVersion = '2.1.0-alpha07'
+    archLifecycleVersion = '2.2.0-alpha01'
+    androidxArchVersion = '2.0.0'
+    coroutines = '1.2.0'
 }
