--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.3.41"
+    ext.kotlin_version = '1.3.50'
+    ext.lifecycle_version = "2.2.0-alpha05"
+    ext.room_version = "2.2.0-rc01"
 
     repositories {
         google()
@@ -26,11 +28,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    roomVersion = '2.1.0-alpha07'
-    archLifecycleVersion = '2.2.0-alpha01'
-    androidxArchVersion = '2.0.0'
-    coroutines = '1.2.0'
 }
