--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,20 +52,23 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Room components
-    implementation "androidx.room:room-runtime:$rootProject.room_version"
-    implementation "androidx.room:room-ktx:$rootProject.room_version"
-    kapt "androidx.room:room-compiler:$rootProject.room_version"
-    testImplementation "androidx.room:room-testing:$rootProject.room_version"
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+    testImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
     // Lifecycle components
-    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycle_version"
-    testImplementation "androidx.arch.core:core-testing:$rootProject.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
+    kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
+    testImplementation "androidx.arch.core:core-testing:$rootProject.androidxArchVersion"
 
     // ViewModel Kotlin support
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.archLifecycleVersion"
 
     // Coroutines
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
+
+    // Testing
+    androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 }
