--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    room_version = '2.2.1'
-    lifecycle_version = '2.1.0'
+    roomVersion = '2.2.1'
+    archLifecycleVersion = '2.2.0-rc02'
+    androidxArchVersion = '2.1.0'
+    coreTestingVersion = "2.1.0"
     coroutines = '1.2.0'
 }
