--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,24 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.gradleVersion = '3.5.3'
+    ext.kotlinVersion = '1.3.61'
+    ext.ktlintVersion = '0.33.0'
+    ext.navigationVersion = '2.2.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id "com.diffplug.gradle.spotless" version "3.24.0"
 }
 
 allprojects {
@@ -19,15 +26,51 @@ allprojects {
         google()
         jcenter()
     }
+    apply plugin: 'com.diffplug.gradle.spotless'
+    spotless {
+        kotlin {
+            target "**/*.kt"
+            targetExclude ".idea/"
+            ktlint(ktlintVersion)
+        }
+    }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
+// Define versions in a single place
 ext {
+    // Sdk and tools
+    // Support library and architecture components support minSdk 14 and above.
+    buildToolsVersion = '29.0.2'
+    compileSdkVersion = 29
+    minSdkVersion = 14
+    targetSdkVersion = 29
+
+    // App dependencies
+    androidXCore = '1.1.0'
+    androidXConstraintlayout = '1.1.3'
+    androidXVersion = '1.0.0'
+    androidXTestCoreVersion = '1.2.0'
+    androidXTestExtKotlinRunnerVersion = '1.1.1'
+    androidXTestRulesVersion = '1.2.0'
+    androidXAnnotations = '1.0.1'
+    androidXLegacySupport = '1.0.0'
+    appCompatVersion = '1.1.0'
+    archLifecycleVersion = '2.2.0-rc03'
+    archTestingVersion = '2.1.0'
+    cardVersion = '1.0.0'
+    coroutinesVersion = '1.2.1'
+    dexMakerVersion = '2.12.1'
+    espressoVersion = '3.2.0'
+    fragmentVersion = '1.2.0'
+    fragmentKtxVersion = '1.2.0'
+    hamcrestVersion = '1.3'
+    junitVersion = '4.12'
+    materialVersion = '1.0.0'
+    mockitoVersion = '2.19.0'
+    recyclerViewVersion = '1.1.0'
+    robolectricVersion = '4.3.1'
     roomVersion = '2.2.2'
-    lifecycleVersion = '2.2.0-rc03'
-    coreTestingVersion = "2.1.0"
-    coroutines = '1.3.0'
+    rulesVersion = '1.0.1'
+    timberVersion = '4.7.1'
+    truthVersion = '1.0'
 }
