--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Enable incremental kapt
+kapt.incremental.apt=true
+# Detect non-incremental annotation processors in the project
+kapt.use.worker.api=true
+# Enable unit test binary resources
+android.enableUnitTestBinaryResources=true
